--- a/index.html
+++ b/index.html
@@ -1,14 +1,44 @@
 <!DOCTYPE html>
 <html lang="en">
-    <link href="./styles/theme.css" rel="stylesheet">
+<link href="https://cdn.jsdelivr.net/npm/bootstrap@5.2.1/dist/css/bootstrap.min.css" rel="stylesheet"
+    integrity="sha384-iYQeCzEYFbKjA/T2uDLTpkwGzCiq6soy8tYaI1GyVh/UjpbCx/TYkiZhlZB6+fzT" crossorigin="anonymous">
+<link href="./styles/theme.css" rel="stylesheet">
+
 <head>
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Document</title>
 </head>
-<body>
-    suck dick
+
+<body style="background-image: url('images/dragonball/bg.png');">
+    <div class="container">
+        <div class="row" style="scale: 50%;">
+            <div class="col"><img src="images/dragonball/0.png" alt=""></div>
+            <div class="col"><img src="images/dragonball/1.png" alt=""></div>
+            <div class="col"><img src="images/dragonball/10.png" alt=""></div>
+            <div class="col"><img src="images/dragonball/11.png" alt=""></div>
+        </div>
+        <div class="row" style="scale: 50%;">
+            <div class="col"><img src="images/dragonball/12.png" alt=""></div>
+            <div class="col"><img src="images/dragonball/13.png" alt=""></div>
+            <div class="col"><img src="images/dragonball/14.png" alt=""></div>
+            <div class="col"><img src="images/dragonball/15.png" alt=""></div>
+        </div>
+        <div class="col"><img src="images/dragonball/16.png" alt=""></div>
+        <div class="col"><img src="images/dragonball/17.png" alt=""></div>
+        <div class="col"><img src="images/dragonball/18.png" alt=""></div>
+        <div class="col"><img src="images/dragonball/2.png" alt=""></div>
+        <div class="col"><img src="images/dragonball/3.png" alt=""></div>
+        <div class="col"><img src="images/dragonball/4.png" alt=""></div>
+        <div class="col"><img src="images/dragonball/5.png" alt=""></div>
+        <div class="col"><img src="images/dragonball/6.png" alt=""></div>
+    </div>
+    </div>
 </body>
+<script src="https://cdn.jsdelivr.net/npm/bootstrap@5.2.1/dist/js/bootstrap.bundle.min.js"
+    integrity="sha384-u1OknCvxWvY5kfmNBILK2hRnQC3Pr17a+RTT6rIHI7NnikvbZlHgTPOOmMi466C8"
+    crossorigin="anonymous"></script>
 <script src="./scripts/main.js" type="javascript"></script>
+
 </html>
