--- a/index.html
+++ b/index.html
@@ -1,10 +1,12 @@
 <!DOCTYPE html>
 <html lang="en">
-<link href="https://cdn.jsdelivr.net/npm/bootstrap@5.2.1/dist/css/bootstrap.min.css" rel="stylesheet"
-        integrity="sha384-iYQeCzEYFbKjA/T2uDLTpkwGzCiq6soy8tYaI1GyVh/UjpbCx/TYkiZhlZB6+fzT" crossorigin="anonymous">
-<link href="./styles/theme.css" rel="stylesheet">
+
 
 <head>
+        <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.2.1/dist/css/bootstrap.min.css" rel="stylesheet"
+                integrity="sha384-iYQeCzEYFbKjA/T2uDLTpkwGzCiq6soy8tYaI1GyVh/UjpbCx/TYkiZhlZB6+fzT"
+                crossorigin="anonymous">
+        <link href="./styles/theme.css" rel="stylesheet">
         <meta charset="UTF-8">
         <meta http-equiv="X-UA-Compatible" content="IE=edge">
         <meta name="viewport" content="width=device-width, initial-scale=1.0">
@@ -42,19 +44,25 @@
                         <div class="col"><input onclick="flipCard(9)" style="height: 200px;"
                                         src="/images/dragonball/tile.png" type="image" id="9" id="delete"></input></div>
                         <div class="col"><input onclick="flipCard(10)" style="height: 200px;"
-                                        src="/images/dragonball/tile.png" type="image" id="10" id="delete"></input></div>
+                                        src="/images/dragonball/tile.png" type="image" id="10" id="delete"></input>
+                        </div>
                         <div class="col"><input onclick="flipCard(11)" style="height: 200px;"
-                                        src="/images/dragonball/tile.png" type="image" id="11" id="delete"></input></div>
+                                        src="/images/dragonball/tile.png" type="image" id="11" id="delete"></input>
+                        </div>
                 </div>
                 <div class="row">
                         <div class="col"><input onclick="flipCard(12)" style="height: 200px;"
-                                        src="/images/dragonball/tile.png" type="image" id="12" id="delete"></input></div>
+                                        src="/images/dragonball/tile.png" type="image" id="12" id="delete"></input>
+                        </div>
                         <div class="col"><input onclick="flipCard(13)" style="height: 200px;"
-                                        src="/images/dragonball/tile.png" type="image" id="13" id="delete"></input></div>
+                                        src="/images/dragonball/tile.png" type="image" id="13" id="delete"></input>
+                        </div>
                         <div class="col"><input onclick="flipCard(14)" style="height: 200px;"
-                                        src="/images/dragonball/tile.png" type="image" id="14" id="delete"></input></div>
+                                        src="/images/dragonball/tile.png" type="image" id="14" id="delete"></input>
+                        </div>
                         <div class="col"><input onclick="flipCard(15)" style="height: 200px;"
-                                        src="/images/dragonball/tile.png" type="image" id="15" id="delete"></input></div>
+                                        src="/images/dragonball/tile.png" type="image" id="15" id="delete"></input>
+                        </div>
                 </div>
         </div>
 </body>
