--- a/index.html
+++ b/index.html
@@ -2,7 +2,7 @@
 <html lang="en">
 <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.2.1/dist/css/bootstrap.min.css" rel="stylesheet"
         integrity="sha384-iYQeCzEYFbKjA/T2uDLTpkwGzCiq6soy8tYaI1GyVh/UjpbCx/TYkiZhlZB6+fzT" crossorigin="anonymous">
-<link href="./styles/style.css" rel="stylesheet">
+<link href="/styles/memorie.css" rel="stylesheet">
 
 <head>
         <meta charset="UTF-8">
@@ -58,10 +58,9 @@
                 </div>
         </div>
 </body>
-<script src="/scripts/main.js"></script>
+<script src="/scripts/memorie.js"></script>
 <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.2.1/dist/js/bootstrap.bundle.min.js"
         integrity="sha384-u1OknCvxWvY5kfmNBILK2hRnQC3Pr17a+RTT6rIHI7NnikvbZlHgTPOOmMi466C8"
         crossorigin="anonymous"></script>
-<script src="./scripts/main.js" type="javascript"></script>
 
 </html>
