--- a/index.html
+++ b/index.html
@@ -18,43 +18,43 @@
         <div class="container text-center">
                 <div class="row">
                         <div class="col"><input onclick="flipCard(0)" style="height: 200px;"
-                                        src="/images/dragonball/tile.png" type="image" id="0" id="delete"></input></div>
+                                        src="images/animals/white-Blue tile.png" type="image" id="0" id="delete"></input></div>
                         <div class="col"><input onclick="flipCard(1)" style="height: 200px;"
-                                        src="/images/dragonball/tile.png" type="image" id="1" id="delete"></input></div>
+                                        src="images/animals/white-Blue tile.png" type="image" id="1" id="delete"></input></div>
                         <div class="col"><input onclick="flipCard(2)" style="height: 200px;"
-                                        src="/images/dragonball/tile.png" type="image" id="2" id="delete"></input></div>
+                                        src="images/animals/white-Blue tile.png" type="image" id="2" id="delete"></input></div>
                         <div class="col"><input onclick="flipCard(3)" style="height: 200px;"
-                                        src="/images/dragonball/tile.png" type="image" id="3" id="delete"></input></div>
+                                        src="images/animals/white-Blue tile.png" type="image" id="3" id="delete"></input></div>
                 </div>
                 <div class="row">
                         <div class="col"><input onclick="flipCard(4)" style="height: 200px;"
-                                        src="/images/dragonball/tile.png" type="image" id="4" id="delete"></input></div>
+                                        src="images/animals/white-Blue tile.png" type="image" id="4" id="delete"></input></div>
                         <div class="col"><input onclick="flipCard(5)" style="height: 200px;"
-                                        src="/images/dragonball/tile.png" type="image" id="5" id="delete"></input></div>
+                                        src="images/animals/white-Blue tile.png" type="image" id="5" id="delete"></input></div>
                         <div class="col"><input onclick="flipCard(6)" style="height: 200px;"
-                                        src="/images/dragonball/tile.png" type="image" id="6" id="delete"></input></div>
+                                        src="images/animals/white-Blue tile.png" type="image" id="6" id="delete"></input></div>
                         <div class="col"><input onclick="flipCard(7)" style="height: 200px;"
-                                        src="/images/dragonball/tile.png" type="image" id="7" id="delete"></input></div>
+                                        src="images/animals/white-Blue tile.png" type="image" id="7" id="delete"></input></div>
                 </div>
                 <div class="row">
                         <div class="col"><input onclick="flipCard(8)" style="height: 200px;"
-                                        src="/images/dragonball/tile.png" type="image" id="8" id="delete"></input></div>
+                                        src="images/animals/white-Blue tile.png" type="image" id="8" id="delete"></input></div>
                         <div class="col"><input onclick="flipCard(9)" style="height: 200px;"
-                                        src="/images/dragonball/tile.png" type="image" id="9" id="delete"></input></div>
+                                        src="images/animals/white-Blue tile.png" type="image" id="9" id="delete"></input></div>
                         <div class="col"><input onclick="flipCard(10)" style="height: 200px;"
-                                        src="/images/dragonball/tile.png" type="image" id="10" id="delete"></input></div>
+                                        src="images/animals/white-Blue tile.png" type="image" id="10" id="delete"></input></div>
                         <div class="col"><input onclick="flipCard(11)" style="height: 200px;"
-                                        src="/images/dragonball/tile.png" type="image" id="11" id="delete"></input></div>
+                                        src="images/animals/white-Blue tile.png" type="image" id="11" id="delete"></input></div>
                 </div>
                 <div class="row">
                         <div class="col"><input onclick="flipCard(12)" style="height: 200px;"
-                                        src="/images/dragonball/tile.png" type="image" id="12" id="delete"></input></div>
+                                        src="images/animals/white-Blue tile.png" type="image" id="12" id="delete"></input></div>
                         <div class="col"><input onclick="flipCard(13)" style="height: 200px;"
-                                        src="/images/dragonball/tile.png" type="image" id="13" id="delete"></input></div>
+                                        src="images/animals/white-Blue tile.png" type="image" id="13" id="delete"></input></div>
                         <div class="col"><input onclick="flipCard(14)" style="height: 200px;"
-                                        src="/images/dragonball/tile.png" type="image" id="14" id="delete"></input></div>
+                                        src="images/animals/white-Blue tile.png" type="image" id="14" id="delete"></input></div>
                         <div class="col"><input onclick="flipCard(15)" style="height: 200px;"
-                                        src="/images/dragonball/tile.png" type="image" id="15" id="delete"></input></div>
+                                        src="images/animals/white-Blue tile.png" type="image" id="15" id="delete"></input></div>
                 </div>
         </div>
 </body>
@@ -62,5 +62,4 @@
 <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.2.1/dist/js/bootstrap.bundle.min.js"
         integrity="sha384-u1OknCvxWvY5kfmNBILK2hRnQC3Pr17a+RTT6rIHI7NnikvbZlHgTPOOmMi466C8"
         crossorigin="anonymous"></script>
-
 </html>
