--- a/index.html
+++ b/index.html
@@ -5,10 +5,11 @@
 <link href="styles/memorie.css" rel="stylesheet">
 
 <head>
+        <link rel="icon" href="/images/vector-pen.svg">
         <meta charset="UTF-8">
         <meta http-equiv="X-UA-Compatible" content="IE=edge">
         <meta name="viewport" content="width=device-width, initial-scale=1.0">
-        <title>Document</title>
+        <title>Memorie</title>
 </head>
 
 <body class="box" onload="scoreboard(), countdown();">
