--- a/index.html
+++ b/index.html
@@ -18,58 +18,58 @@
         </div>
         <div class="container text-center">
                 <div class="row">
-                        <div class="col"><input onclick="flipCard(0)" style="height: 200px;"
+                        <div class="col"><input onclick="flipCardAnimation(0)" style="height: 200px;"
                                         src="images/animals/white-Blue tile.png" type="image" id="0"
                                         id="delete"></input></div>
-                        <div class="col"><input onclick="flipCard(1)" style="height: 200px;"
+                        <div class="col"><input onclick="flipCardAnimation(1)" style="height: 200px;"
                                         src="images/animals/white-Blue tile.png" type="image" id="1"
                                         id="delete"></input></div>
-                        <div class="col"><input onclick="flipCard(2)" style="height: 200px;"
+                        <div class="col"><input onclick="flipCardAnimation(2)" style="height: 200px;"
                                         src="images/animals/white-Blue tile.png" type="image" id="2"
                                         id="delete"></input></div>
-                        <div class="col"><input onclick="flipCard(3)" style="height: 200px;"
+                        <div class="col"><input onclick="flipCardAnimation(3)" style="height: 200px;"
                                         src="images/animals/white-Blue tile.png" type="image" id="3"
                                         id="delete"></input></div>
                 </div>
                 <div class="row">
-                        <div class="col"><input onclick="flipCard(4)" style="height: 200px;"
+                        <div class="col"><input onclick="flipCardAnimation(4)" style="height: 200px;"
                                         src="images/animals/white-Blue tile.png" type="image" id="4"
                                         id="delete"></input></div>
-                        <div class="col"><input onclick="flipCard(5)" style="height: 200px;"
+                        <div class="col"><input onclick="flipCardAnimation(5)" style="height: 200px;"
                                         src="images/animals/white-Blue tile.png" type="image" id="5"
                                         id="delete"></input></div>
-                        <div class="col"><input onclick="flipCard(6)" style="height: 200px;"
+                        <div class="col"><input onclick="flipCardAnimation(6)" style="height: 200px;"
                                         src="images/animals/white-Blue tile.png" type="image" id="6"
                                         id="delete"></input></div>
-                        <div class="col"><input onclick="flipCard(7)" style="height: 200px;"
+                        <div class="col"><input onclick="flipCardAnimation(7)" style="height: 200px;"
                                         src="images/animals/white-Blue tile.png" type="image" id="7"
                                         id="delete"></input></div>
                 </div>
                 <div class="row">
-                        <div class="col"><input onclick="flipCard(8)" style="height: 200px;"
+                        <div class="col"><input onclick="flipCardAnimation(8)" style="height: 200px;"
                                         src="images/animals/white-Blue tile.png" type="image" id="8"
                                         id="delete"></input></div>
-                        <div class="col"><input onclick="flipCard(9)" style="height: 200px;"
+                        <div class="col"><input onclick="flipCardAnimation(9)" style="height: 200px;"
                                         src="images/animals/white-Blue tile.png" type="image" id="9"
                                         id="delete"></input></div>
-                        <div class="col"><input onclick="flipCard(10)" style="height: 200px;"
+                        <div class="col"><input onclick="flipCardAnimation(10)" style="height: 200px;"
                                         src="images/animals/white-Blue tile.png" type="image" id="10"
                                         id="delete"></input></div>
-                        <div class="col"><input onclick="flipCard(11)" style="height: 200px;"
+                        <div class="col"><input onclick="flipCardAnimation(11)" style="height: 200px;"
                                         src="images/animals/white-Blue tile.png" type="image" id="11"
                                         id="delete"></input></div>
                 </div>
                 <div class="row">
-                        <div class="col"><input onclick="flipCard(12)" style="height: 200px;"
+                        <div class="col"><input onclick="flipCardAnimation(12)" style="height: 200px;"
                                         src="images/animals/white-Blue tile.png" type="image" id="12"
                                         id="delete"></input></div>
-                        <div class="col"><input onclick="flipCard(13)" style="height: 200px;"
+                        <div class="col"><input onclick="flipCardAnimation(13)" style="height: 200px;"
                                         src="images/animals/white-Blue tile.png" type="image" id="13"
                                         id="delete"></input></div>
-                        <div class="col"><input onclick="flipCard(14)" style="height: 200px;"
+                        <div class="col"><input onclick="flipCardAnimation(14)" style="height: 200px;"
                                         src="images/animals/white-Blue tile.png" type="image" id="14"
                                         id="delete"></input></div>
-                        <div class="col"><input onclick="flipCard(15)" style="height: 200px;"
+                        <div class="col"><input onclick="flipCardAnimation(15)" style="height: 200px;"
                                         src="images/animals/white-Blue tile.png" type="image" id="15"
                                         id="delete"></input></div>
                 </div>
